TemplateTestSuite initialization IS required for test. Fixed path issues.
Also, needed to run each test in its own new JVM instance, so changed pom.